--- a/src/app/listview/deal-listview/deal-listview.component.html
+++ b/src/app/listview/deal-listview/deal-listview.component.html
@@ -103,6 +103,7 @@
       <kendo-grid-column field="deal_id" title="ID" [width]="100" [locked]="true" [sticky]="true">
         <ng-template kendoGridCellTemplate let-dataItem>
           <div class="customer-name" style="color: red;" (click)="openPopup(dataItem)">{{ dataItem.deal_id }}</div>
+          <span *ngIf="this.userPermission?.dealdelete" (click)="handleDelete(dataItem._id)"><i class="fa fa-trash"></i></span>
         </ng-template>
       </kendo-grid-column>
       <kendo-grid-column field="created_date_time" title="Created" [width]="130">
