--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,26 +39,57 @@
             <a href="/dashboard" class="dropdown-toggle">
             <i class="fa fa-fw fa-plus visible-xs-inline-block"></i><i class="fa fa-dashboard text-xs text-danger g-px-5"></i>Dashboard</a>
          </li>
-        <!--  <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-            <i class="fa fa-fw fa-plus visible-xs-inline-block"></i><i class="fa fa-file-text text-xs text-info g-px-5"></i>Report </a>
-         </li> -->
-         <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle get_last_10_notification" data-toggle="dropdown">
-            <i class="fa fa-bell fa-fw g-px-5"></i>
+        <li class="dropdown">
+          <a href="#" data-toggle="dropdown" class="dropdown-toggle get_last_10_notification" data-toggle="dropdown">
+            <i class="fa fa-bell fa-fw g-px-5"></i> Quote
             <span class="visible-xs-inline">Notifications</span>
-            <span class="badge badge-sm up bg-info pull-right-xs"><span class="noti_count_show">0</span></span>
-            </a>
-            <div class="dropdown-menu w-600">
-               <div class="panel bg-white">
-                  <div class="panel-heading b-light bg-light">
-                     <a href="/vehicle/notification_all">See all the notifications</a>
-                  </div>
-                  <div class="list-group noti_content_show">
-                  </div>
-               </div>
+            <span class="badge badge-sm up bg-info pull-right-xs"><span class="noti_count_show">{{ quoteData.length }}</span></span>
+          </a>
+          <div class="dropdown-menu w-600">
+            <div class="panel bg-white ScrollStyle" >
+              <div class="panel-heading b-light bg-light" *ngFor="let itemQ of quoteData">
+                <a [routerLink]="['/edit-quote',itemQ.quote_id]"><b>{{ itemQ.quote_title }}</b> {{ itemQ.quote_id }} <span style="display:block;color:green">{{ itemQ.created_date_time|date:'dd-MM-YYYY' }}</span></a>
+              </div>
+              <div class="list-group noti_content_show">
+              </div>
             </div>
-         </li>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#" data-toggle="dropdown" class="dropdown-toggle get_last_10_notification" data-toggle="dropdown">
+            <i class="fa fa-bell fa-fw g-px-5"></i> Deal
+            <span class="visible-xs-inline">Notifications</span>
+            <span class="badge badge-sm up bg-info pull-right-xs"><span class="noti_count_show">{{ dealData.length }} &nbsp;</span></span>
+            <span class="badge badge-sm up bg-info pull-right-xs"><span class="noti_count_show"></span></span>
+          </a>
+          <div class="dropdown-menu w-600">
+            <div class="panel bg-white ScrollStyle">
+              <div class="panel-heading b-light bg-light" *ngFor="let itemD of dealData">
+                <a [routerLink]="['/edit-deal',itemD.deal_id]"><b>{{ itemD.deal_title }}</b> {{ itemD.deal_id }} <span
+                    style="display:block;color:green">{{ itemD.created_date_time|date:'dd-MM-YYYY' }}</span></a>
+              </div>
+              <div class="list-group noti_content_show">
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#" data-toggle="dropdown" class="dropdown-toggle get_last_10_notification" data-toggle="dropdown">
+            <i class="fa fa-bell fa-fw g-px-5"></i> Service
+            <span class="visible-xs-inline">Notifications</span>
+            <span class="badge badge-sm up bg-info pull-right-xs"><span class="noti_count_show">{{ serviceData.length }}</span></span>
+          </a>
+          <div class="dropdown-menu w-600">
+            <div class="panel bg-white ScrollStyle">
+              <div class="panel-heading b-light bg-light" *ngFor="let itemS of serviceData">
+                <a href="/services-view/{{itemS._id}}"><b>{{ itemS.service_id }}</b> <span
+                    style="display:block;color:green">{{ itemS.created_at|date:'dd-MM-YYYY' }}</span></a>
+              </div>
+              <div class="list-group noti_content_show">
+              </div>
+            </div>
+          </div>
+        </li>
          <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
                <!-- <span class="thumb-sm avatar m-t-n-sm m-b-n-sm m-r-sm">
