--- a/src/app/create-lead/create-lead.component.html
+++ b/src/app/create-lead/create-lead.component.html
@@ -35,7 +35,7 @@
                   <div class="col-md-4 form-group">
                     <label >Lead ID-  <span class="text-danger">*</span></label>
                     <p class="leadID">{{ this.lead_id }}</p>
-                      <input type="text" class="form-control" placeholder="" formControlName="lead_id" value="this.lead_id" readonly>
+                      <input type="hidden" class="form-control" placeholder="" formControlName="lead_id" value="this.lead_id" readonly>
                     </div>
                       <div class="col-md-4 form-group">
                         <label >Lead Owner <span class="text-danger">*</span></label>
