--- a/src/app/editform/account-edit/account-edit.component.html
+++ b/src/app/editform/account-edit/account-edit.component.html
@@ -186,7 +186,7 @@
 
 
           <div class="form-group  col-md-4 ">
-            <label for="inputGroupSuccess2">Mobile No <span class="text-danger">*</span></label>
+            <label for="inputGroupSuccess2">Mobile No <span class="text-danger"></span></label>
               <div class="input-group">
                 <span class="input-group-addon">+{{this.country_code}}</span>
                 <input type="text" class="form-control " aria-describedby="inputGroupSuccess2Status" placeholder="Enter Your Mobile Number " formControlName="mobile_no">
