--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -208,7 +208,7 @@
 
 
           <div class="form-group  col-md-4 ">
-            <label  for="inputGroupSuccess2">Mobile No <span class="text-danger">*</span></label>
+            <label  for="inputGroupSuccess2">Mobile No <span class="text-danger"></span></label>
               <div class="input-group">
                 <span class="input-group-addon">+{{this.country_code?this.country_code:91}}</span>
                 <input type="text" class="form-control validator" aria-describedby="inputGroupSuccess2Status" placeholder="Enter Your Mobile Number " formControlName="mobile_no" >
